fixed img size and color contrasts

--- a/css/style.css
+++ b/css/style.css
@@ -643,7 +643,7 @@ img {
   color: #000;
 }
 .rates-card:nth-child(3) {
-  background-color: #3a515f;
+  background-color: #364c59;
 }
 
 .rates-card__title {
